--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,11 +1,36 @@
+body {
+    background-color: rgb(253, 120, 144);
+    color:black;
+    font-family:Arial, Helvetica, sans-serif;
+}
     /* Give your page a fun background color */
+    
+h1 {
+    background-color: rgb(202, 199, 199);
+    text-align: center;
+}
+    
+/* Make the header and footer a different color from the background */
 
-    /* Make the header and footer a different color from the background */
+p {
+    background-color:rgb(202, 199, 199);
+    color:white;
+    font-style: italic;
+}
 
-    /* Align the h1 containing your name in the center of the header*/
+img {
+    width:18%;
+    height: auto;
+    border-style:solid;
+    border-color:rgb(202, 199, 199);
+}
+ul {
+    font-family: 'Courier New', Courier, monospace;
+}
+/* Align the h1 containing your name in the center of the header*/
 
-    /* Make your p tag a different color and italic */
+/* Make your p tag a different color and italic */
 
-    /* Put a border around your image */
+/* Put a border around your image */
 
-    /* Change the font-family of your list */
+/* Change the font-family of your list */
