updated css per assignment

--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,11 +1,31 @@
 /* Give your page a fun background color */
-
+body {
+    background-color: aqua;
+}
 /* Make the header and footer a different color from the background */
+header {
+    background-color: burlywood;
+}
 
+footer {
+    background-color: chocolate;
+}
 /* Align the h1 containing your name in the center of the header*/
-
+h1 {
+    text-align: center;
+}
 /* Make your p tag a different color and italic */
-
+p {
+    color: chartreuse;
+    font-style: italic;
+}
 /* Put a border around your image */
-
+img {
+    border: 1px solid palevioletred;
+    width: 450px;
+    height: 450px;
+}
 /* Change the font-family of your list */
+ul {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
