--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,7 +1,10 @@
-/* Give your page a fun background color */
 * {
   margin: 0;
   padding: 0;
+}
+
+html {
+  font-size: 62.5;
 }
 
 body {
@@ -52,14 +55,14 @@ h1 {
   background-color: #3FBDFF;
   position: relative;
   height: 80vh;
+  width: 100%;
 }
 
 
 .about-container {
   color: #F87171;
   font-weight: 700;
-  margin-right: 4rem;
-  padding: 3rem 2rem;
+  padding: 2rem;
   background-color: #FEFF86;
   border-radius: 2rem;
   display: flex;
@@ -70,6 +73,7 @@ h1 {
   position: absolute;
   top: -10%;
   left: 10%;
+  z-index: 10;
 }
 
 ul {
@@ -122,13 +126,17 @@ footer {
   }
   .container {
     flex-direction: column-reverse;
+    height: 100vh;
+  }
+  .about-container {
+    font-size: 1rem;
   }
   .right {
     margin-left: 5rem;
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 742px) {
   h1 {
   font-size: 3rem;
 }
@@ -138,5 +146,9 @@ footer {
 
   .container {
     flex-direction: column-reverse;
+    height: 50vh;
+  }
+  .about-container {
+    font-size: 0.5rem;
   }
 }
