--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,11 +1,86 @@
+/* normalize */
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+}
+/* variables */
+:root {
+  --colorPrimary: rgb(70, 70, 216);
+  --colorPrimaryLight: rgb(202, 208, 255);
+}
+
 /* Give your page a fun background color */
+body {
+  background-color: rgb(220, 219, 219);
+  position: relative;
+}
 
 /* Make the header and footer a different color from the background */
+header,
+footer {
+  background-color: var(--colorPrimary);
+}
+
+header {
+  padding: 1.5rem;
+}
+footer {
+  padding: 1.25rem;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  text-align: center;
+}
 
 /* Align the h1 containing your name in the center of the header*/
+h1 {
+  margin: 0;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: 0.15rem;
+  color: var(--colorPrimaryLight);
+}
 
 /* Make your p tag a different color and italic */
+p {
+  color: var(--colorPrimaryLight);
+  font-style: italic;
+}
 
 /* Put a border around your image */
+img {
+  border: 4px solid var(--colorPrimary);
+  border-radius: 50%;
+  width: 20rem;
+  margin: 2rem;
+}
 
 /* Change the font-family of your list */
+ul {
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--colorPrimary);
+  list-style: none;
+  margin: 2rem;
+
+  padding: 4rem 2rem;
+}
+li {
+  margin: 2rem auto;
+}
+
+/* cards */
+
+.content {
+  display: flex;
+  gap: 2rem;
+  margin: 4rem 2rem;
+}
+article {
+  /* border: 2px solid var(--colorPrimary); */
+  border-radius: 2rem;
+  margin: 0 auto;
+  background-color: var(--colorPrimaryLight);
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+}
