--- a/assignment/style.css
+++ b/assignment/style.css
@@ -53,7 +53,7 @@ p {
 img {
   border: 4px solid var(--colorPrimary);
   border-radius: 50%;
-  width: 20rem;
+  width: 19rem;
   margin: 2rem;
 }
 
@@ -83,4 +83,10 @@ article {
   margin: 0 auto;
   background-color: var(--colorPrimaryLight);
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+}
+@media screen and (max-width: 846px) {
+  .content {
+    flex-direction: column;
+    margin-top: 2rem;
+  }
 }
