--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,17 +1,25 @@
 /* Give your page a fun background color */
-
+body{
+    background-color: darkorange;
+}
 /* Make the header and footer a different color from the background */
 
 /* Align the h1 containing your name in the center of the header*/
+
 h1{
+    align-items: center;
     background-color: blueviolet;
 }
 /* Make your p tag a different color and italic */
 p{
+    font-style: italic;
     background-color: rgb(200, 255, 127);
 }
-/* Put a border around your image */
 
+/* Put a border around your image */
+img{
+    border: 5cqh;
+}
 
 
 /* Change the font-family of your list */
