I changed the align so tthat the text was actually in the center

--- a/assignment/style.css
+++ b/assignment/style.css
@@ -7,7 +7,7 @@ body{
 /* Align the h1 containing your name in the center of the header*/
 
 h1{
-    align-items: center;
+    text-align: center;
     background-color: blueviolet;
 }
 /* Make your p tag a different color and italic */
