--- a/assignment/style.css
+++ b/assignment/style.css
@@ -43,7 +43,7 @@ header {
 }
 
 h1 {
-  font-size: 7rem;
+  font-size: 6rem;
 }
 
 
@@ -62,6 +62,7 @@ h1 {
 .about-container {
   color: #F87171;
   font-weight: 700;
+  font-family: 'Courier New', Courier, monospace;
   padding: 2rem;
   background-color: #FEFF86;
   border-radius: 2rem;
@@ -77,7 +78,7 @@ h1 {
 }
 
 ul {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 li {
@@ -87,14 +88,16 @@ li {
 
 
 .image-container {
-  padding: 2rem;
   border-radius: 2rem;
   position: absolute;
   right: 10%;
+  top: -10%;
+  border: solid 1px white;
+  background-color: #3FBDFF;
 }
 
 img.self {
-  height: 40rem;
+  height: 45rem;
   border-radius: 2rem;
 }
 
@@ -140,6 +143,7 @@ footer {
 @media screen and (max-width: 742px) {
   header {
     padding: 1rem;
+  margin-bottom: 6rem;
   }
   h1 {
   font-size: 3rem;
@@ -149,16 +153,13 @@ footer {
   }
 
   .container {
-    flex-direction: column-reverse;
     max-height: 50vh;
     height: 50vh;
     min-height: 50vh;
     margin-bottom: 0;
+    border-bottom: 1px solid white;
   }
-  .about-container {
-    margin-bottom: 1rem;
-    position: static;
-  }
+
   ul {
     font-size: 0.80rem;
   }
