Adds italic styling to footer p's, because I forgot.

--- a/assignment/style.css
+++ b/assignment/style.css
@@ -22,6 +22,7 @@ h1 {
 /* Make your p tag a different color and italic */
 p {
     color: gold;
+    font-style: italic;
 }
 
 /* Put a border around your image */
