--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,11 +1,25 @@
 /* Give your page a fun background color */
-
+body {
+    background-color: #4169E1;
+}
 /* Make the header and footer a different color from the background */
-
+header, footer {
+    background-color: #FFF5EE;
+}
 /* Align the h1 containing your name in the center of the header*/
-
+h1 {
+    text-align: center;
+}
 /* Make your p tag a different color and italic */
-
+p {
+    color: #00008B;
+    font-style: italic;
+}
 /* Put a border around your image */
-
+{
+    border-image: <img src="https://imgs.search.brave.com/vuX54W-ZBcgoKUjtatireX1YVq-75j3BC6v14DpHz0U/rs:fit:1200:800:1/g:ce/aHR0cDovL3RyYXZl/bGRpZ2cuY29tL3dw/LWNvbnRlbnQvdXBs/b2Fkcy8yMDE2LzEw/L1Rob3JzLVdlbGwt/UGhvdG9ncmFwaHkt/YXQtU3Vuc2V0Lmpw/Zw"> 50px solid black;
+}
 /* Change the font-family of your list */
+ul {
+    font-family: Georgia, 'Times New Roman', serif;
+}
