Added tests for week 1 assignment.

--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,6 +1,6 @@
-/* Give your page a fun background color */
+/* Add a background color to the header element */
 
-/* Make the header and footer a different color from the background */
+/* Add a fun background color to the main element */
 
 /* Align the h1 containing your name in the center of the header*/
 
@@ -9,3 +9,5 @@
 /* Put a border around your image */
 
 /* Change the font-family of your list */
+
+/* Add a background color to the footer element */
